<resources>
    <string name="app_name">final</string>
    <string name="welcome">Stay Home And Shop Online </string>
    <string name="login">Login Here</string>
    <string name="reg">New user ? Sign up</string>
    <string name="userlogin">User Login Here</string>
    <string name="EnterName">Enter Name</string>
    <string name="Enterpw">Password</string>
    <string name="newuser">New User</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Last Name</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="phone">Phone Number</string>
    <string name="birth">Birthday</string>
    <string name="Regi">Confirm</string>
</resources>
