<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10sp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/welcome"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"


            />

        <ImageView
            android:layout_width="151dp"
            android:layout_height="146dp"
            android:layout_gravity="center"
            android:layout_marginTop="70dp"
            android:layout_marginBottom="50dp"
            android:src="@drawable/sho"


            />


        <Button
            android:id="@+id/loginbutton"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginTop="30dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/login"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/signupbutton"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginTop="30dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/reg"
            android:textColor="@color/white" />

    </LinearLayout>


</LinearLayout>