<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10sp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/userlogin"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"


            />

        <ImageView
            android:layout_width="132dp"
            android:layout_height="111dp"
            android:layout_gravity="center"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="40dp"
            android:src="@drawable/login"


            />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/EnterName"
                android:inputType="text"
                android:textColor="@color/colorPrimaryDark"


                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/pw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <EditText
                android:id="@+id/userpw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Enterpw"
                android:inputType="textPassword"
                android:textColor="@color/colorPrimaryDark"


                />

        </android.support.design.widget.TextInputLayout>
       <CheckBox
           android:layout_width="match_parent"
           android:layout_height="30dp"
           android:layout_gravity="center"
           android:text="Remember Me"
           android:layout_marginLeft="80dp"
           android:id="@+id/check"
           />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="@string/login"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:id="@+id/log"


            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Forget Your Password ? "
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:id="@+id/forget"


            />

    </LinearLayout>
</LinearLayout>